# VSCode-Tunnel-Manager

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pre-commit.yaml  python-app.yml
src/vscode_tunnel_manager/: __init__.py  cli.py
src/vscode_tunnel_manager/cli_interface_manager/: cli_interface_manager.py
src/vscode_tunnel_manager/email_manager/: __init__.py  email_manager.py
src/vscode_tunnel_manager/utils/: logger.py
src/vscode_tunnel_manager/vscode_tunnel_manager/: __init__.py  email_manager.py  manager.py
test/: empty_test.py
tests/: test_download_and_extract.py  test_run.py
tests/email_manager/: test_send_email.py
tests/tunnel_manager/: test_download_and_extract.py  test_run.py
